--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ant-design-vue": "^3.2.9",
     "core-js": "^3.8.3",
     "view-ui-plus": "^1.3.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
