--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.9",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
@@ -38,7 +40,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/no-unused-components": "off"
+      "vue/no-unused-components": "off",
+      "vue/no-unused-vars": "off"
     }
   },
   "browserslist": [
