--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "npm": "^8.15.1",
+    "socket.io-client": "^4.5.2",
     "tinymce": "^6.1.2",
     "view-ui-plus": "^1.3.1",
     "vue": "^3.2.13",
