--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ant-design-vue": "^3.2.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "npm": "^8.15.1",
