--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@antv/x6": "^2.11.5",
+    "@antv/x6-plugin-selection": "^2.1.7",
+    "@antv/x6-vue-shape": "^2.1.1",
     "@tinymce/tinymce-vue": "^5.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "ant-design-vue": "^3.2.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "echarts": "^5.4.0",
+    "echarts-gl": "^2.0.9",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "npm": "^8.15.1",
