--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "echarts-gl": "^2.0.9",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
-    "npm": "^8.15.1",
+    "monaco-editor": "^0.41.0",
+    "npm": "^9.8.1",
     "socket.io-client": "^4.5.2",
     "tinymce": "^6.1.2",
     "view-ui-plus": "^1.3.1",
