--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "ant-design-vue": "^3.2.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "echarts": "^5.4.0",
     "echarts-gl": "^2.0.9",
+    "jsencrypt": "^3.3.2",
+    "jsrsasign": "^10.8.6",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "monaco-editor": "^0.41.0",
